# hr-ai-recruitment-copilot

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start_backend.bat
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_18_0512-539394634ce1_init_schema.py  2026_07_18_1119-56d7d540892d_add_resume_channel.py  2026_07_18_1145-696561d456af_add_dictionary_tables.py  2026_07_18_1942-f76a9c3abe03_add_audit_log_table.py
backend/app/: __init__.py  celery_app.py  config.py  db.py  main.py
backend/app/ai/: __init__.py  llm_client.py  orchestrator.py  output_parser.py  prompt_manager.py
backend/app/api/: __init__.py  analytics.py  auth.py  dictionary.py  health.py  interview.py  job.py  resume.py
backend/app/common/: auth.py  logging.py  redact.py  response.py  security.py  storage.py
backend/app/models/: __init__.py  ai_call_log.py  audit_log.py  dictionary.py  enums.py  interview.py  job.py  resume.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  dictionary.py  interview.py  job.py  resume.py
backend/app/services/: __init__.py  analytics_service.py  audit_service.py  auth_service.py  dictionary_service.py  interview_service.py  job_service.py  resume_service.py
backend/app/tasks/: __init__.py  resume_tasks.py
backend/tests/: __init__.py  conftest.py  test_ai_agent.py  test_analytics.py  test_auth.py  test_authz.py  test_health.py  test_interview.py  test_job.py  test_resume.py  test_t9.py
(+64 files in other folders)
